src/modules/base/profileCard/profileCard.css
/* ... */
.avonni-profile-card__avatar-img {
    position: absolute;
    background-color: rgb(255, 255, 255);
    background-position: center center;
    background-size: cover;
    border: 4px solid rgb(255, 255, 255);
    height: 9.25rem;
    width: 9.25rem;
    transition: border-color 0.2s ease;
    z-index: 50;
}

.avonni-profile-card__avatar-img-circle {
    border-radius: 50%;
}

.avonni-profile-card__avatar-img-square {
    border-radius: 0.25rem;
}

.avonni-profile-card__avatar_size-x-small {
    height: 3.25rem;
    width: 3.25rem;
    border: 1px solid rgb(255, 255, 255);
}

.avonni-profile-card__avatar_size-small {
    height: 4.5rem;
    width: 4.5rem;
    border: 2px solid rgb(255, 255, 255);
}

.avonni-profile-card__avatar_size-medium {
    height: 5.75rem;
    width: 5.75rem;
    border: 3px solid rgb(255, 255, 255);
}

.avonni-profile-card__avatar_size-large {
    height: 9.25rem;
    width: 9.25rem;
    border: 4px solid rgb(255, 255, 255);
}

.avonni-profile-card__avatar_size-x-large {
    height: 11.25rem;
    width: 11.25rem;
    border: 5px solid rgb(255, 255, 255);
}

.avonni-profile-card__background_size-x-small {
    min-height: 56px;
}

.avonni-profile-card__background_size-small {
    min-height: 74px;
}

.avonni-profile-card__background_size-medium {
    min-height: 94px;
}

.avonni-profile-card__background_size-large {
    min-height: 150px;
}

.avonni-profile-card__background_size-x-large {
    min-height: 182px;
}

.avonni-profile-card__icon-wrapper {
    width: 100%;
    height: 100%;
    position: relative;
    overflow: hidden;
    z-index: -10;
}

.avonni-profile-card__image {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.avonni-profile-card__image-wrapper {
    position: relative;
    overflow: hidden;
    z-index: -10;
    width: 100%;
    height: 100%;
}

.avonni-profile-card__lightning-icon {
    align-items: center;
    justify-self: center;
    display: flex;
    align-items: center;
    justify-content: center;
    object-fit: cover;
}

.avonni-profile-card__lightning-icon_size-x-small {
    transform: scale(1.7);
}

.avonni-profile-card__lightning-icon_size-small {
    transform: scale(2.4);
}

.avonni-profile-card__lightning-icon_size-medium {
    transform: scale(3);
}

.avonni-profile-card__lightning-icon_size-large {
    transform: scale(4.8);
}

.avonni-profile-card__lightning-icon_size-x-large {
    transform: scale(5.8);
}

.avonni-profile-card__text {
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

.avonni-profile-card__title {
    font-family: var(
        --avonni-profile-card-header-title-font-family,
        'Salesforce Sans',
        Arial,
        sans-serif
    );
    font-size: var(--avonni-profile-card-title-font-size, 18px);
    font-style: var(--avonni-profile-card-title-font-style, normal);
    font-weight: var(--avonni-profile-card-title-font-weight, 400);
    color: var(--avonni-profile-card-title-text-color, #000000);
    line-height: 1.33333em;
    letter-spacing: var(--avonni-profile-card-title-letter-spacing);
}

.avonni-profile-card__subtitle {
    font-family: var(
        --avonni-profile-card-header-subtitle-font-family,
        'Salesforce Sans',
        Arial,
        sans-serif
    );
    font-size: var(--avonni-profile-card-subtitle-font-size, 14px);
    font-weight: var(--avonni-profile-card-subtitle-font-weight, 400);
    font-style: var(--avonni-profile-card-subtitle-font-style, normal);
    color: var(--avonni-profile-card-subtitle-text-color, #000000);
    line-height: 1.71429em;
    letter-spacing: var(--avonni-profile-card-subtitle-letter-spacing);
}

.avonni-profile-card__card_size-x-small [data-element-id='avatar-action'],
.avonni-profile-card__card_size-small [data-element-id='avatar-action'],
.avonni-profile-card__card_size-medium [data-element-id='avatar-action'] {
    bottom: 0;
    right: 0;
}

.slds-card__body {
    margin-top: var(--lwc-varSpacingVerticalSmall, 0.75rem);
    margin-bottom: var(--lwc-varSpacingVerticalSmall, 0.75rem);
}

.avonni-profile-card__card_size-medium .slds-card__body {
    padding: 0 0.75rem;
}

.avonni-profile-card__card_size-large .slds-card__body {
    padding: 0 0.75rem;
}

.avonni-profile-card__card_size-x-large .slds-card__body {
    padding: 0 0.75rem;
}

.avonni-profile-card__card_size-large [data-element-id='avatar-action'] {
    bottom: 0.25rem;
    right: 0.25rem;
}

.avonni-profile-card__card_size-x-large [data-element-id='avatar-action'] {
    bottom: 0.5rem;
    right: 0.5rem;
}

.avonni-profile-card__flex-container_align-center {
    align-items: center;
}

.avonni-profile-card__flex-container_align-end {
    align-items: flex-end;
}

/* AVATAR */
.avonni-profile-card__avatar-bottom.avonni-profile-card__avatar-left.avonni-profile-card__card_size-x-large
    .slds-card__body,
.avonni-profile-card__avatar-bottom.avonni-profile-card__avatar-right.avonni-profile-card__card_size-x-large
    .slds-card__body {
    padding-top: 2.5rem;
    padding-bottom: 1rem;
}

.avonni-profile-card__avatar-top.avonni-profile-card__card_size-x-small {
    padding-top: 0.75rem;
}

.avonni-profile-card__avatar-top.avonni-profile-card__card_size-x-small
    .avonni-profile-card__avatar-img {
    top: -1rem;
}

.avonni-profile-card__avatar-bottom.avonni-profile-card__card_size-x-small
    .avonni-profile-card__avatar-img {
    top: 1rem;
}

.avonni-profile-card__avatar-top.avonni-profile-card__card_size-small {
    padding-top: 1rem;
}

.avonni-profile-card__avatar-top.avonni-profile-card__card_size-small
    .avonni-profile-card__avatar-img {
    top: -1.25rem;
}

.avonni-profile-card__avatar-bottom.avonni-profile-card__card_size-small
    .avonni-profile-card__avatar-img {
    top: 1.25rem;
}

.avonni-profile-card__avatar-top.avonni-profile-card__card_size-medium {
    padding-top: 1.25rem;
}

.avonni-profile-card__avatar-top.avonni-profile-card__card_size-medium
    .avonni-profile-card__avatar-img {
    top: -1.5rem;
}
/* ... */

